[gd_scene load_steps=3 format=3 uid="uid://dpdkxjw467dip"]

[ext_resource type="Script" uid="uid://4gsaik43gou1" path="res://Script/inventory_slot.gd" id="1_0cu6i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6h8ck"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
mouse_filter = 1
script = ExtResource("1_0cu6i")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.68085366, 0.92411417, 0.88914746, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.1466907, 0.5226555, 0.41273016, 1)

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(70, 70)
scale = Vector2(2.5, 2.5)

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
layout_mode = 1
offset_left = 5.0
offset_top = -5.0
offset_right = 45.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="ItemButton" type="Button" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_6h8ck")

[node name="DetailsPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.68235296, 0.9254902, 0.8901961, 1)

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 5.0
offset_right = 45.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.07450981, 0.07450981, 0.07450981, 0.78431374)
theme_override_font_sizes/font_size = 30
text = "Type"

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -42.0
offset_right = 106.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.07450981, 0.07450981, 0.07450981, 0.5882353)
theme_override_font_sizes/font_size = 30
text = "EFFECT"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
z_index = 5
layout_mode = 0
offset_top = 156.0
offset_right = 240.0
offset_bottom = 356.0
color = Color(0.68235296, 0.9254902, 0.8901961, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Use"

[node name="AssignButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -28.0
offset_right = 115.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Assign"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Drop"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ItemDesc" type="Label" parent="CanvasLayer2"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -466.0
offset_top = -215.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
autowrap_mode = 2

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/AssignButton" to="." method="_on_assign_button_pressed"]
[connection signal="pressed" from="UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
